--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>UIET - University Institute of Engineering & Technology | Panjab University Chandigarh</title>
+    <meta name="description" content="University Institute of Engineering & Technology (UIET) - Premier engineering institute under Panjab University, Chandigarh. Offering undergraduate, postgraduate and doctoral programs in engineering and technology." />
+    <meta name="author" content="UIET Panjab University" />
+    <meta name="keywords" content="UIET, engineering college, Panjab University, Chandigarh, computer science, electronics, mechanical, civil, biotechnology, admissions, placement" />
+
+    <meta property="og:title" content="UIET - University Institute of Engineering & Technology" />
+    <meta property="og:description" content="Premier engineering institute under Panjab University, Chandigarh offering quality technical education and research opportunities." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1200&h=630&fit=crop&crop=center" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@UIET_PU" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1200&h=630&fit=crop&crop=center" />
+    
+    <link rel="icon" href="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=32&h=32&fit=crop&crop=center" type="image/png">
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
