Fixed header , converted color theme and created PYQs page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta property="og:title" content="UIET - University Institute of Engineering & Technology" />
     <meta property="og:description" content="Premier engineering institute under Panjab University, Chandigarh offering quality technical education and research opportunities." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1200&h=630&fit=crop&crop=center" />
+    <meta property="og:image" content="https://imgs.search.brave.com/xC3gTQLulY-1CaC5-1vGWxLNAxY4ZXfdRp1O-EvepC4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvZW4vdGh1bWIv/OS85NC9VSUVUX2xv/Z28ucG5nLzUxMnB4/LVVJRVRfbG9nby5w/bmc" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@UIET_PU" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1200&h=630&fit=crop&crop=center" />
+    <meta name="twitter:image" content="https://imgs.search.brave.com/xC3gTQLulY-1CaC5-1vGWxLNAxY4ZXfdRp1O-EvepC4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvZW4vdGh1bWIv/OS85NC9VSUVUX2xv/Z28ucG5nLzUxMnB4/LVVJRVRfbG9nby5w/bmc" />
     
-    <link rel="icon" href="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=32&h=32&fit=crop&crop=center" type="image/png">
+    <link rel="icon" href="https://imgs.search.brave.com/xC3gTQLulY-1CaC5-1vGWxLNAxY4ZXfdRp1O-EvepC4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvZW4vdGh1bWIv/OS85NC9VSUVUX2xv/Z28ucG5nLzUxMnB4/LVVJRVRfbG9nby5w/bmc" type="image/png">
   </head>
 
   <body>
